# hw1

./: .gitignore  CMakeLists-back.txt  CMakeLists.txt  FaChecker.cpp  README.md  build.sh  hw3.ipynb  problems.json  readFA.cpp  report.md  status.sh  testAll.sh
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
data/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  problems.json
